@@ -8,4 +8,3 @@ tools/*
 app/*
 !app/*.c
 !app/makefile
-include/*/*_export.h
