@@ -1,8 +1,8 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.13.7
+VERSION=1.13.8
 
-DEPENDENCY="zeda=1.7.3;zm=1.7.2"
+DEPENDENCY="zeda=1.7.7;zm=1.7.3"
 
 # DAE (COLLADA)
 CONFIG_USE_DAE=y
